monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h


extern ADDAPI bool MONERO_Wallet_exportKeyImages(void* wallet_ptr, const char* filename, bool all);
extern ADDAPI const char* MONERO_Wallet_exportKeyImagesUR(void* wallet_ptr, size_t max_fragment_length, bool all) ;
extern ADDAPI bool MONERO_Wallet_importKeyImages(void* wallet_ptr, const char* filename);
extern ADDAPI bool MONERO_Wallet_importKeyImagesUR(void* wallet_ptr, const char* input);
extern ADDAPI bool MONERO_Wallet_exportOutputs(void* wallet_ptr, const char* filename, bool all);
extern ADDAPI const char* MONERO_Wallet_exportOutputsUR(void* wallet_ptr, size_t max_fragment_length, bool all);
extern ADDAPI bool MONERO_Wallet_importOutputs(void* wallet_ptr, const char* filename);
extern ADDAPI bool MONERO_Wallet_importOutputsUR(void* wallet_ptr, const char* input);
extern ADDAPI bool MONERO_Wallet_setupBackgroundSync(void* wallet_ptr, int background_sync_type, const char* wallet_password, const char* background_cache_password);
extern ADDAPI int MONERO_Wallet_getBackgroundSyncType(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_startBackgroundSync(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_stopBackgroundSync(void* wallet_ptr, const char* wallet_password);
extern ADDAPI bool MONERO_Wallet_isBackgroundSyncing(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_isBackgroundWallet(void* wallet_ptr);
extern ADDAPI void* MONERO_Wallet_history(void* wallet_ptr);
extern ADDAPI void* MONERO_Wallet_addressBook(void* wallet_ptr);
extern ADDAPI void* MONERO_Wallet_coins(void* wallet_ptr);
extern ADDAPI void* MONERO_Wallet_subaddress(void* wallet_ptr);
extern ADDAPI void* MONERO_Wallet_subaddressAccount(void* wallet_ptr);
extern ADDAPI uint32_t MONERO_Wallet_defaultMixin(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_setDefaultMixin(void* wallet_ptr, uint32_t arg);
extern ADDAPI bool MONERO_Wallet_setCacheAttribute(void* wallet_ptr, const char* key, const char* val);
extern ADDAPI const char* MONERO_Wallet_getCacheAttribute(void* wallet_ptr, const char* key);
extern ADDAPI bool MONERO_Wallet_setUserNote(void* wallet_ptr, const char* txid, const char* note);
extern ADDAPI const char* MONERO_Wallet_getUserNote(void* wallet_ptr, const char* txid);
extern ADDAPI const char* MONERO_Wallet_getTxKey(void* wallet_ptr, const char* txid);
extern ADDAPI const char* MONERO_Wallet_signMessage(void* wallet_ptr, const char* message, const char* address);
extern ADDAPI bool MONERO_Wallet_verifySignedMessage(void* wallet_ptr, const char* message, const char* address, const char* signature);
extern ADDAPI bool MONERO_Wallet_rescanSpent(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_setOffline(void* wallet_ptr, bool offline);
extern ADDAPI bool MONERO_Wallet_isOffline(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_segregatePreForkOutputs(void* wallet_ptr, bool segregate);
extern ADDAPI void MONERO_Wallet_segregationHeight(void* wallet_ptr, uint64_t height);
extern ADDAPI void MONERO_Wallet_keyReuseMitigation2(void* wallet_ptr, bool mitigation);
extern ADDAPI bool MONERO_Wallet_lockKeysFile(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_unlockKeysFile(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_isKeysFileLocked(void* wallet_ptr);
extern ADDAPI int MONERO_Wallet_getDeviceType(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_coldKeyImageSync(void* wallet_ptr, uint64_t spent, uint64_t unspent);
extern ADDAPI const char* MONERO_Wallet_deviceShowAddress(void* wallet_ptr, uint32_t accountIndex, uint32_t addressIndex);
extern ADDAPI bool MONERO_Wallet_reconnectDevice(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_getBytesReceived(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_getBytesSent(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_getStateIsConnected();
extern ADDAPI unsigned char* MONERO_Wallet_getSendToDevice();
extern ADDAPI size_t MONERO_Wallet_getSendToDeviceLength();
extern ADDAPI unsigned char* MONERO_Wallet_getReceivedFromDevice();
extern ADDAPI size_t MONERO_Wallet_getReceivedFromDeviceLength();
extern ADDAPI bool MONERO_Wallet_getWaitsForDeviceSend();
extern ADDAPI bool MONERO_Wallet_getWaitsForDeviceReceive();
extern ADDAPI void MONERO_Wallet_setDeviceReceivedData(unsigned char* data, size_t len);
extern ADDAPI void MONERO_Wallet_setDeviceSendData(unsigned char* data, size_t len);
extern ADDAPI void* MONERO_WalletManager_createWallet(void* wm_ptr, const char* path, const char* password, const char* language, int networkType);
extern ADDAPI void* MONERO_WalletManager_openWallet(void* wm_ptr, const char* path, const char* password, int networkType);
extern ADDAPI void* MONERO_WalletManager_recoveryWallet(void* wm_ptr, const char* path, const char* password, const char* mnemonic, int networkType, uint64_t restoreHeight, uint64_t kdfRounds, const char* seedOffset);
extern ADDAPI void* MONERO_WalletManager_createWalletFromKeys(void* wm_ptr, const char* path, const char* password, const char* language, int nettype, uint64_t restoreHeight, const char* addressString, const char* viewKeyString, const char* spendKeyString, uint64_t kdf_rounds);
extern ADDAPI void* MONERO_WalletManager_createDeterministicWalletFromSpendKey(void* wm_ptr, const char* path, const char* password,
                                                const char* language, int nettype, uint64_t restoreHeight,
                                                const char* spendKeyString, uint64_t kdf_rounds);
extern ADDAPI void* MONERO_WalletManager_createWalletFromDevice(void* wm_ptr, const char* path, const char* password, int nettype, const char* deviceName, uint64_t restoreHeight, const char* subaddressLookahead, const char* viewKeyString, const char* spendKeyString, uint64_t kdf_rounds);
extern ADDAPI void* MONERO_WalletManager_createWalletFromPolyseed(void* wm_ptr, const char* path, const char* password,
                                                int nettype, const char* mnemonic, const char* passphrase,
                                                bool newWallet, uint64_t restore_height, uint64_t kdf_rounds);
extern ADDAPI bool MONERO_WalletManager_closeWallet(void* wm_ptr, void* wallet_ptr, bool store);
extern ADDAPI bool MONERO_WalletManager_walletExists(void* wm_ptr, const char* path);
extern ADDAPI bool MONERO_WalletManager_verifyWalletPassword(void* wm_ptr, const char* keys_file_name, const char* password, bool no_spend_key, uint64_t kdf_rounds);
extern ADDAPI int MONERO_WalletManager_queryWalletDevice(void* wm_ptr, const char* keys_file_name, const char* password, uint64_t kdf_rounds);