impls/monero.rs/src/bindings.rs

extern "C" {
    pub fn MONERO_Wallet_exportKeyImages(
        wallet_ptr: *mut ::std::os::raw::c_void,
        filename: *const ::std::os::raw::c_char,
        all: bool,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_exportKeyImagesUR(
        wallet_ptr: *mut ::std::os::raw::c_void,
        max_fragment_length: usize,
        all: bool,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_importKeyImages(
        wallet_ptr: *mut ::std::os::raw::c_void,
        filename: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_importKeyImagesUR(
        wallet_ptr: *mut ::std::os::raw::c_void,
        input: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_exportOutputs(
        wallet_ptr: *mut ::std::os::raw::c_void,
        filename: *const ::std::os::raw::c_char,
        all: bool,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_exportOutputsUR(
        wallet_ptr: *mut ::std::os::raw::c_void,
        max_fragment_length: usize,
        all: bool,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_importOutputs(
        wallet_ptr: *mut ::std::os::raw::c_void,
        filename: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_importOutputsUR(
        wallet_ptr: *mut ::std::os::raw::c_void,
        input: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_setupBackgroundSync(
        wallet_ptr: *mut ::std::os::raw::c_void,
        background_sync_type: ::std::os::raw::c_int,
        wallet_password: *const ::std::os::raw::c_char,
        background_cache_password: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getBackgroundSyncType(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Wallet_startBackgroundSync(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_stopBackgroundSync(
        wallet_ptr: *mut ::std::os::raw::c_void,
        wallet_password: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_isBackgroundSyncing(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_isBackgroundWallet(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_history(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_addressBook(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_coins(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_subaddress(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_subaddressAccount(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Wallet_defaultMixin(wallet_ptr: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MONERO_Wallet_setDefaultMixin(wallet_ptr: *mut ::std::os::raw::c_void, arg: u32);
}
extern "C" {
    pub fn MONERO_Wallet_setCacheAttribute(
        wallet_ptr: *mut ::std::os::raw::c_void,
        key: *const ::std::os::raw::c_char,
        val: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getCacheAttribute(
        wallet_ptr: *mut ::std::os::raw::c_void,
        key: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_setUserNote(
        wallet_ptr: *mut ::std::os::raw::c_void,
        txid: *const ::std::os::raw::c_char,
        note: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getUserNote(
        wallet_ptr: *mut ::std::os::raw::c_void,
        txid: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_getTxKey(
        wallet_ptr: *mut ::std::os::raw::c_void,
        txid: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_signMessage(
        wallet_ptr: *mut ::std::os::raw::c_void,
        message: *const ::std::os::raw::c_char,
        address: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_verifySignedMessage(
        wallet_ptr: *mut ::std::os::raw::c_void,
        message: *const ::std::os::raw::c_char,
        address: *const ::std::os::raw::c_char,
        signature: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_rescanSpent(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_setOffline(wallet_ptr: *mut ::std::os::raw::c_void, offline: bool);
}
extern "C" {
    pub fn MONERO_Wallet_isOffline(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_segregatePreForkOutputs(
        wallet_ptr: *mut ::std::os::raw::c_void,
        segregate: bool,
    );
}
extern "C" {
    pub fn MONERO_Wallet_segregationHeight(wallet_ptr: *mut ::std::os::raw::c_void, height: u64);
}
extern "C" {
    pub fn MONERO_Wallet_keyReuseMitigation2(
        wallet_ptr: *mut ::std::os::raw::c_void,
        mitigation: bool,
    );
}
extern "C" {
    pub fn MONERO_Wallet_lockKeysFile(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_unlockKeysFile(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_isKeysFileLocked(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getDeviceType(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Wallet_coldKeyImageSync(
        wallet_ptr: *mut ::std::os::raw::c_void,
        spent: u64,
        unspent: u64,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_deviceShowAddress(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
        addressIndex: u32,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_reconnectDevice(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getBytesReceived(wallet_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_getBytesSent(wallet_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_Wallet_getStateIsConnected(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getSendToDevice(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn MONERO_Wallet_getSendToDeviceLength(wallet_ptr: *mut ::std::os::raw::c_void) -> usize;
}
extern "C" {
    pub fn MONERO_Wallet_getReceivedFromDevice(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn MONERO_Wallet_getReceivedFromDeviceLength(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> usize;
}
extern "C" {
    pub fn MONERO_Wallet_getWaitsForDeviceSend(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getWaitsForDeviceReceive(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_setDeviceReceivedData(
        wallet_ptr: *mut ::std::os::raw::c_void,
        data: *mut ::std::os::raw::c_uchar,
        len: usize,
    );
}
extern "C" {
    pub fn MONERO_Wallet_setDeviceSendData(
        wallet_ptr: *mut ::std::os::raw::c_void,
        data: *mut ::std::os::raw::c_uchar,
        len: usize,
    );
}
extern "C" {
    pub fn MONERO_WalletManager_createWallet(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        language: *const ::std::os::raw::c_char,
        networkType: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManager_openWallet(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        networkType: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManager_recoveryWallet(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        mnemonic: *const ::std::os::raw::c_char,
        networkType: ::std::os::raw::c_int,
        restoreHeight: u64,
        kdfRounds: u64,
        seedOffset: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManager_createWalletFromKeys(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        language: *const ::std::os::raw::c_char,
        nettype: ::std::os::raw::c_int,
        restoreHeight: u64,
        addressString: *const ::std::os::raw::c_char,
        viewKeyString: *const ::std::os::raw::c_char,
        spendKeyString: *const ::std::os::raw::c_char,
        kdf_rounds: u64,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManager_createDeterministicWalletFromSpendKey(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        language: *const ::std::os::raw::c_char,
        nettype: ::std::os::raw::c_int,
        restoreHeight: u64,
        spendKeyString: *const ::std::os::raw::c_char,
        kdf_rounds: u64,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManager_createWalletFromDevice(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        nettype: ::std::os::raw::c_int,
        deviceName: *const ::std::os::raw::c_char,
        restoreHeight: u64,
        subaddressLookahead: *const ::std::os::raw::c_char,
        viewKeyString: *const ::std::os::raw::c_char,
        spendKeyString: *const ::std::os::raw::c_char,
        kdf_rounds: u64,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManager_createWalletFromPolyseed(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        nettype: ::std::os::raw::c_int,
        mnemonic: *const ::std::os::raw::c_char,
        passphrase: *const ::std::os::raw::c_char,
        newWallet: bool,
        restore_height: u64,
        kdf_rounds: u64,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManager_closeWallet(
        wm_ptr: *mut ::std::os::raw::c_void,
        wallet_ptr: *mut ::std::os::raw::c_void,
        store: bool,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_WalletManager_walletExists(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_WalletManager_verifyWalletPassword(
        wm_ptr: *mut ::std::os::raw::c_void,
        keys_file_name: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        no_spend_key: bool,
        kdf_rounds: u64,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_WalletManager_queryWalletDevice(
        device_type: ::std::os::raw::c_int,
        keys_file_name: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        kdf_rounds: u64,
    ) -> bool;
}
